<?xml version="1.0" encoding="utf-8"?>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Main Menu Card View TAB -->
    <string name="cardView_Weather_Card">
        Concerned about the weather in your area? Check to see what attire is best for the weather.
    </string>
    <string name="cardView_Calendar_Card">
        Have a planned event that requires a specific outfit? Schedule your special attire here
    </string>
    <string name="cardView_Favorites_Card">
        View all your favorite selections of clothing
    </string>
    <string name="cardView_Closet_Card">
        View the numerous clothing inside your closet
    </string>
    <string name="cardView_Camera_Card">
        Add some clothing to your closet by simply using your phone\'s camera
    </string>
    <string name="cardView_Settings_Card">
        Something not working right? Check and edit your settings to perfection
    </string>
    <string name="title_activity_camera">cameraActivity</string>

    <!-- Weather TAB -->
    <string name="change_city">Change city</string>

    <string name="open_weather_maps_app_id">c556e2f979775773d2c16fa38b813cc1</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <!-- Camera TAB -->
    <string name="picture">
        Picture
    </string>
    <string name="description_info">
        Info
    </string>
    <string name="request_permission">
        This sample needs camera permission.
    </string>
    <string name="camera_error">
        This device doesn\'t support Camera2 API.
    </string>

    <string name="intro_message">
        <b>Use your device\'s Camera to add clothing to your closet</b>
    </string>
    <string name="title_activity_view_closet">ViewCloset</string>

    <string name="title_activity_welcome_screen">Intelligent Closet Assistant</string>
    <string name="start_button">Let\'s Start</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_clothing">ViewClothing</string>

    <!-- Titles -->
    <string name="title_card_flip">Card Flip</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <string name="action_settings">Settings</string>

    <!-- Calendar Strings -->
    <string name="hello">Open calendar</string>
    <string name="open">Open</string>

</resources>
