<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/settings_card"
            android:layout_width="0dp"
            android:layout_height="99dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/holo_blue_dark"
            app:cardElevation="0dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/closet_card"
            app:layout_constraintRight_toRightOf="@+id/closet_card"
            app:layout_constraintTop_toBottomOf="@+id/calendar_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/favorites_image"
                    android:layout_width="105dp"
                    android:layout_height="89dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/settings" />

                <TextView
                    android:id="@+id/settingTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="0dp"
                    android:fontFamily="serif-monospace"
                    android:lineSpacingExtra="24sp"
                    android:text="Settings"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@+id/favorites_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/favorites_image"
                    app:layout_constraintHorizontal_bias="0.503" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/cardView_Settings_Card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/favorites_image"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/favorites_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/settingTextView"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/calendar_card"
            android:layout_width="357dp"
            android:layout_height="99dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/holo_blue_dark"
            app:cardElevation="0dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/closet_card"
            app:layout_constraintRight_toRightOf="@+id/closet_card"
            app:layout_constraintTop_toBottomOf="@+id/favorites_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/favorites_image"
                    android:layout_width="105dp"
                    android:layout_height="89dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/calendar" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="TextView"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toRightOf="@+id/favorites_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/favorites_image"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/cardView_Calendar_Card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/favorites_image"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintLeft_toRightOf="@+id/favorites_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/camera_card"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/holo_blue_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="40dp">

                <ImageView
                    android:id="@+id/camera_image"
                    android:layout_width="106dp"
                    android:layout_height="93dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="CameraImage"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.508"
                    app:srcCompat="@drawable/camera" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="TextView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/camera_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/camera_image"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/cardView_Camera_Card"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/camera_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/closet_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/holo_blue_dark"
            app:layout_constraintLeft_toLeftOf="@+id/camera_card"
            app:layout_constraintRight_toRightOf="@+id/camera_card"
            app:layout_constraintTop_toBottomOf="@+id/camera_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/closet_image"
                    android:layout_width="106dp"
                    android:layout_height="93dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/closet" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    app:layout_constraintTop_toTopOf="@+id/closet_image"
                    android:layout_marginTop="0dp"
                    app:layout_constraintLeft_toRightOf="@+id/closet_image"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="-1dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/cardView_Closet_Card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/closet_image"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/closet_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    tools:layout_conversion_absoluteHeight="16dp"
                    tools:layout_conversion_absoluteWidth="284dp"
                    tools:layout_conversion_absoluteX="16dp"
                    tools:layout_conversion_absoluteY="16dp" />
            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/favorites_card"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:cardBackgroundColor="@android:color/holo_blue_dark"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="@+id/closet_card"
            app:layout_constraintRight_toRightOf="@+id/closet_card"
            app:layout_constraintTop_toBottomOf="@+id/closet_card">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/favorites_image"
                    android:layout_width="105dp"
                    android:layout_height="89dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/favorites" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="TextView"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintLeft_toRightOf="@+id/favorites_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/favorites_image"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="-1dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="serif-monospace"
                    android:text="@string/cardView_Favorites_Card"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/favorites_image"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintLeft_toRightOf="@+id/favorites_image"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:layout_constraintVertical_bias="0.0" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>
</ScrollView>

